--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Angular Seed</title>
+    <title>Coding Master</title>
+    <link rel="stylesheet" href="css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/app.css"/>
 </head>
-<body>
-<h1>Angular Seed</h1>
+<body ng-app="app">
+
+    <div ng-view>
+    </div>
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/angular/angular-route.js"></script>
+    <script src="lib/jquery-2.1.1.js"></script>
+    <script src="lib/bootstrap.js"></script>
+
+    <script src="js/app.js"></script>
+    <script src="js/directives.js"></script>
+    <script src="js/controllers/testHTMLController.js"></script>
+
+    <script src="partials/siteHeader.html"></script>
+    <script src="partials/home.html"></script>
+    <script src="partials/testHTML.html"></script>
 </body>
 </html>
