Add login and register

--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
     <script src="js/services/forumService.js"></script>
     <script src="js/services/headersService.js"></script>
     <script src="js/services/notifyService.js"></script>
+    <script src="js/services/userService.js"></script>
 
     <script src="js/directives.js"></script>
     <script src="js/controllers/testHTMLController.js"></script>
     <script src="js/controllers/forumController.js"></script>
+    <script src="js/controllers/loginController.js"></script>
+    <script src="js/controllers/registerController.js"></script>
 
 </body>
 </html>
