--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <script src="js/controllers/forumController.js"></script>
     <script src="js/controllers/loginController.js"></script>
     <script src="js/controllers/registerController.js"></script>
+    <script src="js/controllers/logoutController.js"></script>
+    <script src="js/controllers/postController.js"></script>
 
 </body>
 </html>
