--- a/index.html
+++ b/index.html
@@ -23,14 +23,19 @@
     <script src="js/services/headersService.js"></script>
     <script src="js/services/notifyService.js"></script>
     <script src="js/services/userService.js"></script>
+    <script src="js/services/testService.js"></script>
+    <script src="js/services/storageService.js"></script>
 
     <script src="js/directives.js"></script>
+
     <script src="js/controllers/testHTMLController.js"></script>
     <script src="js/controllers/forumController.js"></script>
     <script src="js/controllers/loginController.js"></script>
     <script src="js/controllers/registerController.js"></script>
     <script src="js/controllers/logoutController.js"></script>
     <script src="js/controllers/postController.js"></script>
+    <script src="js/controllers/allTestsController.js"></script>
+    <script src="js/controllers/testController.js"></script>
 
 </body>
 </html>
